syntax = "proto3";

package erda.apps.aifunction;
option go_package = "github.com/erda-project/erda-proto-go/apps/aifunction/pb";

import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "common/http.proto";

service AiFunction {
  rpc Apply(ApplyRequest) returns (google.protobuf.Value) {
    option(google.api.http) = {
      get: "/api/ai-proxy/access"
    };
  }
}

message ApplyRequest {
  Background background = 1;
  Prompt prompt = 2;
}

message Background {
  string userID = 1;
  uint64 OrgID = 2;
  string OrgName = 3;
  uint64 ProjectID = 4;
  string ProjectName = 5;
  uint64 ApplicationID = 6;
  string ApplicationName = 7;
  uint64 RuntimeID = 8;
  string Referer = 9;
}

message Prompt {
  string prompt = 1;
}